# telock/pages/api/upload/uploadStudentGroups.js
@@ -6,25 +6,25 @@ export default async function handler(req, res) {
 
     try {
       const students = await sql('SELECT student_id, class FROM students WHERE class IS NOT NULL');
-      console.log('Students:', students);
+      console.log('Diákok:', students);
       const groups = await sql('SELECT group_id, group_name FROM csoportok');
-      console.log('Groups:', groups);
+      console.log('Csoportok:', groups);
       const insertValues = [];
 
       students.forEach(student => {
-        console.log(`Processing student ${student.student_id} with class:`, student.class);
+        console.log(`Diák ${student.student_id} feldolgozása osztállyal:`, student.class);
         const studentClasses = student.class ? student.class.split(',').map(c => c.trim()) : [];
 
         studentClasses.forEach(className => {
           const group = groups.find(g => g.group_name === className);
-          console.log(`Checking className: ${className}, Found group:`, group);
+          console.log(`ClassName ellenőrzés: ${className}, Talált csoport:`, group);
           if (group) {
             insertValues.push([student.student_id, group.group_id]);
           }
         });
       });
 
-      console.log('Insert values:', insertValues);
+      console.log('Feltöltendő adat:', insertValues);
 
       if (insertValues.length > 0) {
         const studentIds = insertValues.map(iv => iv[0]);
@@ -35,16 +35,16 @@ export default async function handler(req, res) {
           [studentIds, groupIds]
         );
 
-        res.status(201).json({ message: 'Student groups uploaded successfully', inserted: insertValues.length });
+        res.status(201).json({ message: 'Diák-csoportok sikeresen feltöltve', inserted: insertValues.length });
       } else {
-        res.status(200).json({ message: 'No matching student groups found, nothing inserted.', inserted: 0 });
+        res.status(200).json({ message: 'Nem találtak megfelelő diákcsoportokat, semmi sem került beillesztésre.', inserted: 0 });
       }
 
     } catch (error) {
-      console.error('Error inserting student groups:', error);
-      res.status(500).json({ message: 'Error inserting student groups', error: error.message });
+      console.error('Hiba az adatok feltöltésekor:', error);
+      res.status(500).json({ message: 'Hiba az adatok feltöltésekor', error: error.message });
     }
   } else {
-    res.status(405).json({ message: 'Method Not Allowed' });
+    res.status(405).json({ message: 'A HTTP metódus nem engedélyezett' });
   }
 }
